Fixed bootstrap configuration

--- a/app/javascript/stylesheets/styles.scss
+++ b/app/javascript/stylesheets/styles.scss
@@ -1,3 +1,5 @@
+// Correct path to fonts
+$icon-font-path: "~bootstrap/dist/fonts/";
 @import '~bootstrap/dist/css/bootstrap';
 /*
 $fa-font-path: "~font-awesome/fonts";
