updated msc workshops logo

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -6,7 +6,7 @@ footer
       .sponsors.vcenter
         .sponsor-item
           = link_to 'https://it-edu.mipt.ru/pages/workshops/?lang=en' do
-            = image_tag asset_pack_path('images/msc_workshops.png')
+            = image_tag asset_pack_path('images/msc_workshops_2019.png')
       .vcenter.sponsors-title
         h4 Sponsors
       .vcenter.sponsors
