Add display,keyboard,mouse fields for teams

--- a/app/views/admin/teams/index.html.slim
+++ b/app/views/admin/teams/index.html.slim
@@ -19,6 +19,9 @@ table.table
         td = team.id
         td = team.full_name
         td = team.with_laptop ? 'Yes' : 'No'
+        td = team.with_display ? 'Yes' : 'No'
+        td = team.keyboard ? 'Yes' : 'No'
+        td = team.mouse ? 'Yes' : 'No'
         td = team.delegation&.name
         td = team.tshirts
         td
