--- a/app/views/admin/teams/_form.html.slim
+++ b/app/views/admin/teams/_form.html.slim
@@ -1,6 +1,9 @@
 = simple_form_for @team, url: [:admin, @camp, @team] do |f|
   = f.input :name
   = f.input :with_laptop
+  = f.input :with_display, as: :boolean
+  = f.input :keyboard, as: :boolean
+  = f.input :mouse, as: :boolean
   = f.association :delegation, as: :select, collection: @camp.delegations.ordered_by_name
   = f.association :participants, as: :check_boxes, collection: @camp.participants_without_teams(@team)
   = f.button :submit, class: 'btn btn-primary'
