Remove MIPT partner

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,9 +1,9 @@
 footer
   .container
     .row
-      .vcenter
+      /.vcenter
         h4 Partners
-      .sponsors.vcenter
+      /.sponsors.vcenter
         .sponsor-item
           = link_to 'https://it-edu.mipt.ru/pages/workshops/?lang=en' do
             = image_tag asset_pack_path('images/msc_workshops_2019.png')
