--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,12 @@
       <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
       <%= f.input :password_confirmation, required: true %>
     <% end %>
+    <div class="form-group has-error">
+      <span class="help-block">
+        <%= flash[:recaptcha_error] %>
+      </span>
+      <%= recaptcha_tags %>
+    </div>
   </div>
 
   <div class="form-actions">
