--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,12 +1,6 @@
 footer
   .container
     .row
-      /.vcenter
-        h4 Partners
-      /.sponsors.vcenter
-        .sponsor-item
-          = link_to 'https://it-edu.mipt.ru/pages/workshops/?lang=en' do
-            = image_tag asset_pack_path('images/msc_workshops_2019.png')
       .vcenter.sponsors-title
         h4 Sponsors
       .vcenter.sponsors
@@ -22,9 +16,15 @@ footer
         /.sponsor-item
           = link_to 'https://meyvndigital.co.uk' do
             = image_tag asset_pack_path('images/meyvndigital.png')
-        /.sponsor-item
+        .sponsor-item
           = link_to 'http://www.huawei.com/en/' do
             = image_tag asset_pack_path('images/huawei.png')
         /.sponsor-item.no-space
           = link_to 'https://www.playrix.ru' do
             = image_tag 'playrix.png'
+      .vcenter
+        h4 Partners
+      .sponsors.vcenter
+        .sponsor-item
+          = link_to 'https://icpc.itmo.ru' do
+            = image_tag asset_pack_path('images/nerc_icpc.png')
