--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -16,15 +16,19 @@ footer
         /.sponsor-item
           = link_to 'https://meyvndigital.co.uk' do
             = image_tag asset_pack_path('images/meyvndigital.png')
-        .sponsor-item
+        /.sponsor-item
           = link_to 'http://www.huawei.com/en/' do
             = image_tag asset_pack_path('images/huawei.png')
         /.sponsor-item.no-space
           = link_to 'https://www.playrix.ru' do
             = image_tag 'playrix.png'
-      .vcenter
+      .vcenter.partners-title
         h4 Partners
       .sponsors.vcenter
         .sponsor-item
+          = link_to 'https://discover.it-edu.com/en/' do
+            = image_tag asset_pack_path('images/msc_workshops_2019.png')
+        .sponsor-item
           = link_to 'https://icpc.itmo.ru' do
             = image_tag asset_pack_path('images/nerc_icpc.png')
+        
