--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -16,7 +16,7 @@ footer
         /.sponsor-item
           = link_to 'https://meyvndigital.co.uk' do
             = image_tag asset_pack_path('images/meyvndigital.png')
-        /.sponsor-item
+        .sponsor-item
           = link_to 'http://www.huawei.com/en/' do
             = image_tag asset_pack_path('images/huawei.png')
         /.sponsor-item.no-space
