--- a/app/views/participants/_form.html.slim
+++ b/app/views/participants/_form.html.slim
@@ -17,11 +17,13 @@
   = f.fields_for :personal, f.object.personal do |ff|
     = ff.input :first_name, required: true
     = ff.input :last_name, required: true
-    = ff.input :birth_date, as: :date, start_year: Date.current.year - 100, end_year: Date.current.year, required: true, default: nil, include_blank: true
-    / = f.input :tshirt, as: :select, collection: Participant.tshirts.map(&:first)
+    = ff.input :birth_date, as: :date, start_year: Date.current.year - 65, end_year: Date.current.year, required: true, default: nil, include_blank: true
+    - tshirts = Participant.tshirts.map(&:first); tshirts.delete('xs')
+    = f.input :tshirt, as: :select, collection: tshirts, label: 'T-Shirt'
+    = ff.input :share_with_partners, as: :radio_buttons, collection: [['Yes', true], ['No', false]], required: true, label: 'Share my email with partners of the camp'
     = f.input :delegation_id, as: :select, collection: participant.camp.delegations.order(name: :asc)
     / = ff.input :food_limitations, as: :text, label: 'Tell us if you have any food limitations'
-    = ff.input :needs_visa, as: :boolean, label: 'I need visa to get to Petrozavodsk'
+    /= ff.input :needs_visa, as: :boolean, label: 'I need visa to get to Petrozavodsk'
     .for_visa
       .panel.panel-default
         .panel-heading Visa invitation data
