fix: change nerc address

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -29,6 +29,6 @@ footer
           = link_to 'https://discover.it-edu.com/en/' do
             = image_tag asset_pack_path('images/msc_workshops_2020.png')
         .sponsor-item
-          = link_to 'https://icpc.itmo.ru' do
+          = link_to 'https://nerc.icpc.global' do
             = image_tag asset_pack_path('images/nerc_icpc.png')
         
